# async-fastapi-template

./: README.md  artemis.json
artemis/: .env  .gitlab-ci.yml  README.md  artemis.yml  (+2 more)
artemis/backend/app/: .flake8  pyproject.toml
artemis/backend/app/alembic/: env.py
artemis/backend/app/app/: celeryworker_pre_start.py  initial_data.py  main.py  worker.py
artemis/backend/app/app/api/: deps.py
artemis/backend/app/app/api/api_v1/: api.py
artemis/backend/app/app/api/api_v1/endpoints/: games.py  items.py  login.py  redis_item.py  users.py  utils.py
artemis/backend/app/app/core/: celery_app.py  config.py
artemis/backend/app/app/crud/mongo/: base.py  game.py
artemis/backend/app/app/crud/postgres/: base.py  item.py  user.py
artemis/backend/app/app/db/: init_db.py
artemis/backend/app/app/db/mongo/: base_class.py  session.py
artemis/backend/app/app/db/postgres/: session.py
artemis/backend/app/app/db/redis/: session.py
artemis/backend/app/app/models/mongo/: mysportsfeeds.py
artemis/backend/app/app/models/postgres/: __init__.py  item.py  user.py
artemis/backend/app/app/models/redis/: item.py
artemis/backend/app/app/schemas/: __init__.py
artemis/backend/app/app/schemas/postgres/: user.py
artemis/backend/app/app/schemas/redis/: item.py
artemis/backend/app/app/tests/: conftest.py
artemis/backend/app/app/tests/api/api_v1/: test_celery.py  test_games.py  test_items.py  test_login.py  test_redis_item.py  test_users.py
artemis/backend/app/app/tests/crud/: test_item.py  test_user.py
artemis/backend/app/app/tests/utils/: item.py  user.py
(+4 files in other folders)
